# 0rigin

./: .gitignore  .gitmodules  0.md  2D_TO_3D_VALIDATION_MIGRATION_PLAN.md  4-phase-test-framework.md  A3_GEODESIC_VERIFICATION.md  ACHIEVEMENTS.md  ARCHITECTURE.md  ARCHITECTURE_CLEANUP_COMPLETE.md  ARCHITECTURE_CONSOLIDATION_COMPLETE.md  B1_BEKENSTEIN_HAWKING_REFINEMENT_REPORT.md  B1_PARTICLE_SPECTRUM_REPORT.md  B1_PHASE1_IMPLEMENTATION_SUMMARY.md  B1_PHASE2_RESULTS.md  B1_STEP3_EXECUTIVE_SUMMARY.md  B2_IMPLEMENTATION_COMPLETE.md  B3_RFIELD_STABILIZATION_PROPOSAL.md  B6_HIGGS_MECHANISM_REPORT.md  BINARY_CLEANUP_REPORT.md  C1_BCS_GAP_MODEL.md  C1_BCS_GAP_RESULTS.csv  C1_IMPLEMENTATION_SUMMARY.md  C4_C5_VALIDATION_REPORT.md  C4_DARK_ENERGY_VALIDATION_REPORT.md  CHIRAL_COUPLING_QA_SUMMARY.md  CHIRAL_MASS_EIGENVALUE_EXPLANATION.md  CHIRAL_MASS_INTEGRATION.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  COSMOLOGICAL_CONSTANT_RESULTS.md  D1_EXECUTIVE_SUMMARY_FINAL.md  D1_EXPERIMENTAL_PREDICTIONS_REPORT.md  D1_EXPERIMENTAL_PREDICTIONS_SUMMARY.md  D2_LABORATORY_SCALE_REPORT.md  D3_BINARY_MERGER_STATUS.md  D4_PARTICLE_SCATTERING_IMPLEMENTATION.md  D5_ATOMIC_PHYSICS_REPORT.md  DIRAC_CLEANUP_REPORT.md  DIRAC_IMPLEMENTATION_SUMMARY.md  (+131 more)
Quality_Checks/: quality_gates_1.md
analysis/: B1_PHASE1_FINDINGS.md  B1_PHASE5_STATUS.md  DOCUMENTATION_PROGRESS_ANALYSIS.md  PDL_INITIALIZATION_PLAN.md  PHASE0_REPORT.md  PROJECT_STATE_ASSESSMENT.md  analyze_b1_phase1.py  analyze_b1_results.py  b1_optimization_results.csv  b1_phase1_results.csv  b1_phase2_results.csv  b1_phase3_results.csv  b1_saturation_check_256.csv  b1_separation_extended_scan.csv  dynamic_mass_prediction.md  phase0_lyapunov.py  phase0_spectrum_autocorr.py
book/: CH10 Modified.txt  CH10 Original.txt  CH10_QA_REVIEW_REPORT.md  CH10_TRD_VALIDATION_REPORT.md  CLAUDE.md  COMPREHENSIVE_QA_REPORT.md  Epilogue_Modified_v1.txt  Epilogue_Modified_v2.txt  Epilogue_Modified_v3.txt  Epilogue_Modified_v4.txt  Epilogue_Modified_v5.txt  Epilogue_Modified_v5_critique.txt  Epilogue_Original.txt  NARRATIVE_EVOLUTION_ANALYSIS.md  PartIV_Modified.txt  PartIV_Original.txt  PartV_Modified.txt  PartV_Original.txt  REVISED_QA_APPROACH.md  REVISIONS_COMPLETE.md  SYNTHESIS_BLUEPRINT.md  VALIDATION_STATUS_UPDATE.md
config/: antiparticle_separation_validation.yaml  astrophysical_observations.yaml  atomic_physics.yaml  binary_merger.yaml  casimir_force_validation.yaml  causality.yaml  chiral_channel_selector.yaml  chiral_operator_comparison.yaml  clock_bfield_test.yaml  coherence_gravity_coupling.yaml  cosmological_constant.yaml  coupled_128x128_N1.yaml  coupled_128x128_N10.yaml  coupled_128x128_N100.yaml  coupled_64x64_N1.yaml  coupled_64x64_N10.yaml  coupled_64x64_N100.yaml  coupled_N100_only.yaml  coupled_N10_only.yaml  coupled_N1_only.yaml  coupled_dynamics_validation.yaml  coupled_vacuum_particle.yaml  d1_predictions_complete.yaml  d1_predictions_summary.yaml  dark_energy.yaml  dark_energy.yaml.bak  dark_matter.yaml  debug_particle_recording.yaml  defect_localization_validation.yaml  dirac_vacuum_chiral_coupling.yaml  einstein_field_equations.yaml  electroweak.yaml  em_coupling_disabled_regression.yaml  em_coupling_gauge_invariance.yaml  em_coupling_uniform_field.yaml  em_coupling_weak_field.yaml  em_cpu_validation.yaml  em_energy_test.yaml  em_full_validation.yaml  em_gravity_coupling.yaml  (+118 more)
data/: mcp_omni.db-shm
docs/: 0.md  2025-12-18_CLEAN_IMPLEMENTATION_COMPLETE.md  2025-12-18_MSFT-10.6.md  2025-12-18_OPERATOR_SPLITTING_CRASH_ANALYSIS.md  2025-12-18_OPERATOR_SPLITTING_CRITICAL_ISSUE.md  2025-12-18_OPERATOR_SPLITTING_FIX.md  2025-12-18_OPERATOR_SPLITTING_N10_CRASH.md  2025-12-18_OPERATOR_SPLITTING_RECURSION_BUG.md  2025-12-18_OPERATOR_SPLITTING_STATUS.md  2025-12-18_RECURSION_FIX_COMPLETE.md  2025-12-18_REFACTORING_SUMMARY.md  2025-12-18_SHADER_AUDIT_SUMMARY.md  2025-12-18_STOCHASTIC_TEST_VERIFICATION.md  2025-12-18_SYNC_SHADER_PUSHCONST_FIX.md  3D_MIGRATION_COMPLETE.md  4-phase-test-framework.md  API.md  ARCHIVE_MAP.md  B1_SATURATION_ANALYSIS.md  B1_UNIFIED_RESULTS.md  BLOCKERS_FIXED.md  CMAKE_FIX_SUMMARY.md  CONSOLIDATION_REPORT.md  CPU_VALIDATION_SUMMARY.md  CRITICAL_REVIEW_RESPONSE.md  DEVELOPER_GUIDE.md  DIRAC_COUPLING_PLAN.md  DIRAC_IMPLEMENTATION_GUIDE.md  Determinant.md  Determinism.md  Dirac-Anomaly.md  Directive.md  EM_COUPLING_PHYSICS_THEORY.md  EM_ENERGY_INVESTIGATION_20251230.md  EM_TEST_VALIDATION_ANALYSIS.md  EM_VALIDATION_FINAL_STATUS_20251230.md  EXPERIMENTAL_VALIDATION_SUMMARY.md  FINAL_SCIENTIFIC_ASSESSMENT.md  GOLDEN_KEY_CALIBRATION.md  GPU_BUFFER_OVERFLOW_FIX.md  (+65 more)
examples/: basic_synchronization.py  demo_synchronization.py  prototype_test.py
include/: ConservativeSolver.h  Dirac3D.h  GeodesicIntegrator.h  Maxwell3D.h  SMFTCore.h  SMFTCore3D.h  TRDCSVWriter.h  TRDCore.h  TRDCore3D.h  TRDFieldInitializers.h  TRDParticleIntegrator.h
legacy-python/: ARCHITECTURE.md  CONTRIBUTING.md  FINAL_SUMMARY.md  README.md  test_suite_results.md  verify_energy_fix.py
output/: EM_VALIDATION_STATUS.md  KLEIN_GORDON_TEST_RESULTS.md  README.md  VISUALIZATION_GUIDE.md  a2_weak_field_test_results.txt  causality_flat.csv  causality_flat_trajectory.csv  fine_structure_constant_results.csv  visualize_dirac_stochastic.py  visualize_msft.py  visualize_phase1.py
results/: laboratory_scale_predictions.csv  renormalizability_report.yaml
scripts/: analyze_b1_saturation.py  analyze_fss.py  archive_legacy_outputs.sh  k_parameter_scan.sh  master_test_execution.sh  monitor_saturation_check.sh  rename_smft_to_trd.sh  wait_and_analyze_saturation.sh
shaders/: sq1_v.spv  test_simple.spv
src/: ConservativeSolver.cpp  Dirac3D.cpp  DiracEvolution.cpp  DiracEvolution.h  GeodesicIntegrator.cpp  INTEGRATION_POLICY.md  KleinGordonEvolution.cpp  KleinGordonEvolution.h  MSFT.cpp  MSFT.h  MSFTBufferManager.cpp  MSFTBufferManager.h  MSFTCommon.cpp  MSFTCommon.h  MSFTCompute.cpp  MSFTCompute.h  MSFTDescriptorManager.cpp  MSFTDescriptorManager.h  MSFTEngine.cpp  MSFTEngine.h  MSFTPipelineFactory.cpp  MSFTPipelineFactory.h  MSFTVisualizer.cpp  MSFTVisualizer.h  SMFT.cpp  (+58 more)
(+3218 files in other folders)
